deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-native-platform
  labels:
    app.kubernetes.io/name: cloud-native-platform
spec:
  replicas: 2

  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: cloud-native-platform

  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloud-native-platform

    spec:
      serviceAccountName: cloud-native-platform

      terminationGracePeriodSeconds: 30

      securityContext:
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: tmp
          emptyDir: {}

        - name: prometheus-multiprocess
          emptyDir: {}


      containers:
        - name: app

          image: docker.io/mashhood101/cloud-native-delivery-platform:placeholder

          imagePullPolicy: IfNotPresent

          volumeMounts:
            - name: tmp
              mountPath: /tmp

            - name: prometheus-multiprocess
              mountPath: /tmp/prometheus

          ports:
            - name: http
              containerPort: 5000
              protocol: TCP

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 2

          readinessProbe:
            httpGet:
              path: /somepath
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
