deploy/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-platform
spec:
  selector:
    app.kubernetes.io/name: cloud-native-platform
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
